--- a/main.ipynb
+++ b/main.ipynb
@@ -307,8 +307,104 @@
         }
       ],
       "source": [
+        "# level 1\n",
         "for i in a:\n",
         "    print(i)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# level 2\n",
+        "for i in a:\n",
+        "    for x in i:\n",
+        "        print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7hOP_YHsuVMd",
+        "outputId": "228d6fac-8857-4b4d-e7a4-7c9c8025d712"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.84062117\n",
+            "0.48006452\n",
+            "0.7876326\n",
+            "0.77109654\n",
+            "0.44409793\n",
+            "0.09014516\n",
+            "0.81835917\n",
+            "0.87645456\n",
+            "0.7066597\n",
+            "0.09610873\n",
+            "0.41247947\n",
+            "0.57433389\n",
+            "0.29960807\n",
+            "0.42315023\n",
+            "0.34452557\n",
+            "0.4751035\n",
+            "0.17003563\n",
+            "0.46843998\n",
+            "0.92796258\n",
+            "0.69814654\n",
+            "0.41290051\n",
+            "0.19561071\n",
+            "0.16284783\n",
+            "0.97016248\n",
+            "0.71725408\n",
+            "0.87702738\n",
+            "0.31244595\n",
+            "0.76615487\n",
+            "0.20754036\n",
+            "0.57871812\n",
+            "0.07214068\n",
+            "0.40356048\n",
+            "0.12149553\n",
+            "0.53222417\n",
+            "0.9976855\n",
+            "0.12536346\n",
+            "0.80930099\n",
+            "0.50962849\n",
+            "0.94555126\n",
+            "0.33364763\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flatten version\n",
+        "to_print = []\n",
+        "\n",
+        "for i in a:\n",
+        "    for x in i:\n",
+        "        to_print.append(x)\n",
+        "\n",
+        "print(to_print) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z6S75-vvsl7u",
+        "outputId": "b2cf2502-1ed4-4a77-c356-97a8dbd4f62c"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
+          ]
+        }
       ]
     },
     {
@@ -401,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "dHUgKyQzhDq3"
       },
@@ -447,8 +543,131 @@
         }
       ],
       "source": [
+        "# level 1\n",
         "for i in b:\n",
         "    print(i)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# level 2\n",
+        "for i in b:\n",
+        "    for x in i:\n",
+        "        print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nQaIjxXjtFWa",
+        "outputId": "542c15df-762f-4814-d8ce-c2de3631a17e"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.55867166, 0.06210792, 0.08147297], [0.82579068, 0.91512478, 0.06833034]]\n",
+            "[[0.55867166, 0.06210792, 0.08147297], [0.82579068, 0.91512478, 0.06833034]]\n",
+            "[[0.05440634, 0.65857693, 0.30296619], [0.06769833, 0.96031863, 0.51293743]]\n",
+            "[[0.05440634, 0.65857693, 0.30296619], [0.06769833, 0.96031863, 0.51293743]]\n",
+            "[[0.09143215, 0.71893382, 0.45850679], [0.58256464, 0.59005654, 0.56266457]]\n",
+            "[[0.09143215, 0.71893382, 0.45850679], [0.58256464, 0.59005654, 0.56266457]]\n",
+            "[[0.71600294, 0.87392666, 0.11434044], [0.8694668, 0.65669313, 0.10708681]]\n",
+            "[[0.71600294, 0.87392666, 0.11434044], [0.8694668, 0.65669313, 0.10708681]]\n",
+            "[[0.07529684, 0.46470767, 0.47984544], [0.65368638, 0.14901286, 0.23760688]]\n",
+            "[[0.07529684, 0.46470767, 0.47984544], [0.65368638, 0.14901286, 0.23760688]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# level 3\n",
+        "for i in b:\n",
+        "    for x in i:\n",
+        "        for z in x:\n",
+        "            print(z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i06KLwRMuIzH",
+        "outputId": "5fd3f5be-cf49-40c1-9df5-b9e47152e248"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.55867166\n",
+            "0.06210792\n",
+            "0.08147297\n",
+            "0.82579068\n",
+            "0.91512478\n",
+            "0.06833034\n",
+            "0.05440634\n",
+            "0.65857693\n",
+            "0.30296619\n",
+            "0.06769833\n",
+            "0.96031863\n",
+            "0.51293743\n",
+            "0.09143215\n",
+            "0.71893382\n",
+            "0.45850679\n",
+            "0.58256464\n",
+            "0.59005654\n",
+            "0.56266457\n",
+            "0.71600294\n",
+            "0.87392666\n",
+            "0.11434044\n",
+            "0.8694668\n",
+            "0.65669313\n",
+            "0.10708681\n",
+            "0.07529684\n",
+            "0.46470767\n",
+            "0.47984544\n",
+            "0.65368638\n",
+            "0.14901286\n",
+            "0.23760688\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flatten version\n",
+        "to_print = []\n",
+        "\n",
+        "for i in b:\n",
+        "    for x in i:\n",
+        "        for z in x:\n",
+        "            to_print.append(z)\n",
+        "\n",
+        "print(to_print) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tg8jOd1PsS88",
+        "outputId": "50133d6c-e90d-488f-f344-eb67b6e293e4"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.55867166, 0.06210792, 0.08147297, 0.82579068, 0.91512478, 0.06833034, 0.05440634, 0.65857693, 0.30296619, 0.06769833, 0.96031863, 0.51293743, 0.09143215, 0.71893382, 0.45850679, 0.58256464, 0.59005654, 0.56266457, 0.71600294, 0.87392666, 0.11434044, 0.8694668, 0.65669313, 0.10708681, 0.07529684, 0.46470767, 0.47984544, 0.65368638, 0.14901286, 0.23760688]\n"
+          ]
+        }
       ]
     },
     {
@@ -462,43 +681,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qZecbtBthDq4",
-        "outputId": "141201da-2c85-47d9-f1f9-55d7c4fb0c8f"
+        "outputId": "a70f067c-7039-4f1b-fe2f-e20155463117"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.55867166, 0.06210792, 0.08147297]\n",
-            "[0.55867166, 0.06210792, 0.08147297]\n",
-            "[0.82579068, 0.91512478, 0.06833034]\n",
-            "[0.05440634, 0.65857693, 0.30296619]\n",
-            "[0.05440634, 0.65857693, 0.30296619]\n",
-            "[0.06769833, 0.96031863, 0.51293743]\n",
-            "[0.09143215, 0.71893382, 0.45850679]\n",
-            "[0.09143215, 0.71893382, 0.45850679]\n",
-            "[0.71600294, 0.87392666, 0.11434044]\n",
-            "[0.8694668, 0.65669313, 0.10708681]\n",
-            "[0.07529684, 0.46470767, 0.47984544]\n",
-            "[0.07529684, 0.46470767, 0.47984544]\n",
-            "[0.07529684, 0.46470767, 0.47984544]\n",
-            "[0.65368638, 0.14901286, 0.23760688]\n",
-            "[0.65368638, 0.14901286, 0.23760688]\n"
+            "0.06210792\n",
+            "0.08147297\n",
+            "0.06833034\n",
+            "0.05440634\n",
+            "0.30296619\n",
+            "0.06769833\n",
+            "0.09143215\n",
+            "0.45850679\n",
+            "0.11434044\n",
+            "0.10708681\n",
+            "0.07529684\n",
+            "0.46470767\n",
+            "0.47984544\n",
+            "0.14901286\n",
+            "0.23760688\n"
           ]
         }
       ],
       "source": [
         "for i in b:\n",
         "    for x in i:\n",
-        "        for num in x:\n",
-        "            if num <= 0.5:\n",
-        "                print(x)"
+        "        for z in x:\n",
+        "            if z <= 0.5:\n",
+        "                print(z)"
       ]
     },
     {
