--- a/challenge_3.ipynb
+++ b/challenge_3.ipynb
@@ -136,23 +136,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZExvaFMytTwB",
-        "outputId": "444b17be-d53a-483e-c443-66650212249d"
+        "outputId": "9c6e69fd-5f59-432d-f3c1-2a917676c3f8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "method 1\n",
+            "METHOD 1\n",
+            "------------------------------------------------------------------------------------------------------------------------------------------\n",
             "[('conversation', 1), (\"we're\", 1), ('plate', 1), ('sour', 1), ('jukebox', 1), ('taxi', 1), ('fast', 1), ('bag', 1), ('man', 1), ('going', 1), ('one', 1), ('backseat', 1), ('friends', 1), ('take', 1), ('play', 1), ('okay', 1), ('begin', 1), ('over', 1), ('just', 1), ('are', 1), ('tell', 1), ('drinking', 1), ('our', 1), ('where', 1), (\"i'll\", 1), ('all', 1), (\"isn't\", 1), ('make', 1), ('lover', 1), ('get', 1), ('radio', 1), ('give', 1), ('can', 1), ('club', 1), ('it', 1), ('out', 1), ('chance', 1), ('first', 1), ('table', 1), ('thrifty', 1), ('driver', 1), ('slow', 1), ('dance', 1), ('trust', 1), ('family', 1), ('week', 1), ('date', 1), ('leave', 1), ('at', 1), ('hand', 1), ('how', 1), ('eat', 1), ('about', 1), ('story', 1), ('sweet', 1), ('best', 1), ('let', 1), ('van', 1), ('shots', 1), ('place', 1), ('find', 1), ('kiss', 1), ('stop', 1), ('bar', 1), (\"don't\", 2), ('mind', 2), ('know', 2), ('so', 2), ('start', 2), ('boy', 2), ('girl', 2), ('singing', 2), ('doing', 2), ('somebody', 2), ('handmade', 2), ('may', 2), ('that', 2), ('much', 2), ('grab', 2), ('was', 2), ('say', 2), ('waist', 2), ('want', 2), (\"let's\", 2), ('not', 2), ('crazy', 2), ('go', 2), ('to', 2), ('fill', 2), ('hours', 2), ('push', 3), ('then', 3), ('put', 3), ('room', 3), ('magnet', 3), ('up', 3), ('pull', 3), ('last', 3), ('do', 3), ('smell', 3), ('although', 3), ('falling', 3), ('were', 3), ('night', 3), ('heart', 3), ('for', 3), ('bedsheets', 3), ('talk', 4), ('too', 5), ('is', 5), ('every', 6), ('new', 6), ('follow', 6), ('brand', 6), ('of', 6), ('i', 6), ('day', 6), ('lead', 6), ('shape', 6), ('discovering', 6), ('something', 6), ('we', 7), ('a', 8), ('like', 10), ('me', 10), ('now', 11), ('baby', 14), ('you', 16), ('be', 16), ('body', 17), ('the', 18), ('your', 21), ('with', 22), (\"i'm\", 23), ('and', 23), ('love', 25), ('in', 27), ('my', 33), ('come', 37), ('on', 40)]\n",
             "\n",
-            "method 2 (aka.. preferred method)\n",
+            "METHOD 2 (aka.. preferred method)\n",
+            "------------------------------------------------------------------------------------------------------------------------------------------\n",
             "[(1, 'about'), (1, 'all'), (1, 'are'), (1, 'at'), (1, 'backseat'), (1, 'bag'), (1, 'bar'), (1, 'begin'), (1, 'best'), (1, 'can'), (1, 'chance'), (1, 'club'), (1, 'conversation'), (1, 'dance'), (1, 'date'), (1, 'drinking'), (1, 'driver'), (1, 'eat'), (1, 'family'), (1, 'fast'), (1, 'find'), (1, 'first'), (1, 'friends'), (1, 'get'), (1, 'give'), (1, 'going'), (1, 'hand'), (1, 'how'), (1, \"i'll\"), (1, \"isn't\"), (1, 'it'), (1, 'jukebox'), (1, 'just'), (1, 'kiss'), (1, 'leave'), (1, 'let'), (1, 'lover'), (1, 'make'), (1, 'man'), (1, 'okay'), (1, 'one'), (1, 'our'), (1, 'out'), (1, 'over'), (1, 'place'), (1, 'plate'), (1, 'play'), (1, 'radio'), (1, 'shots'), (1, 'slow'), (1, 'sour'), (1, 'stop'), (1, 'story'), (1, 'sweet'), (1, 'table'), (1, 'take'), (1, 'taxi'), (1, 'tell'), (1, 'thrifty'), (1, 'trust'), (1, 'van'), (1, \"we're\"), (1, 'week'), (1, 'where'), (2, 'boy'), (2, 'crazy'), (2, 'doing'), (2, \"don't\"), (2, 'fill'), (2, 'girl'), (2, 'go'), (2, 'grab'), (2, 'handmade'), (2, 'hours'), (2, 'know'), (2, \"let's\"), (2, 'may'), (2, 'mind'), (2, 'much'), (2, 'not'), (2, 'say'), (2, 'singing'), (2, 'so'), (2, 'somebody'), (2, 'start'), (2, 'that'), (2, 'to'), (2, 'waist'), (2, 'want'), (2, 'was'), (3, 'although'), (3, 'bedsheets'), (3, 'do'), (3, 'falling'), (3, 'for'), (3, 'heart'), (3, 'last'), (3, 'magnet'), (3, 'night'), (3, 'pull'), (3, 'push'), (3, 'put'), (3, 'room'), (3, 'smell'), (3, 'then'), (3, 'up'), (3, 'were'), (4, 'talk'), (5, 'is'), (5, 'too'), (6, 'brand'), (6, 'day'), (6, 'discovering'), (6, 'every'), (6, 'follow'), (6, 'i'), (6, 'lead'), (6, 'new'), (6, 'of'), (6, 'shape'), (6, 'something'), (7, 'we'), (8, 'a'), (10, 'like'), (10, 'me'), (11, 'now'), (14, 'baby'), (16, 'be'), (16, 'you'), (17, 'body'), (18, 'the'), (21, 'your'), (22, 'with'), (23, 'and'), (23, \"i'm\"), (25, 'love'), (27, 'in'), (33, 'my'), (37, 'come'), (40, 'on')]\n"
           ]
         }
@@ -163,12 +165,14 @@
         "\n",
         "# method 1\n",
         "sorted_tups = sorted(word_freq.items(), key=operator.itemgetter(1))\n",
-        "print(\"method 1\")\n",
+        "print(\"METHOD 1\")\n",
+        "print(\"-\" * 138)\n",
         "print(sorted_tups)\n",
         "\n",
         "# method 2\n",
         "sorted_dict = sorted((value, key) for (key, value) in word_freq.items())\n",
-        "print(\"\\nmethod 2 (aka.. preferred method)\")\n",
+        "print(\"\\nMETHOD 2 (aka.. preferred method)\")\n",
+        "print(\"-\" * 138)\n",
         "print(sorted_dict)"
       ]
     }
