--- a/challenge_1.ipynb
+++ b/challenge_1.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WRkkrCoi5ZLb",
-        "outputId": "1714105f-906a-4f4f-f382-4e4ae0f2dd38"
+        "outputId": "12f7b0da-80ae-498e-b902-901085ef6bda"
       },
       "outputs": [
         {
@@ -72,7 +72,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOUWqs4C5ZLd",
-        "outputId": "6ef92a87-3e85-4219-ba65-68ca2a9378e8"
+        "outputId": "4d6ebc1f-40fc-4c17-c15d-288ccf369a7a"
       },
       "outputs": [
         {
@@ -108,11 +108,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "mmVXKMe55ZLe"
+        "id": "mmVXKMe55ZLe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        },
+        "outputId": "7cbb099b-07fb-481a-ed7f-0dcc7a747b6f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-6f2b9be92dd4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    to_add = \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k',\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+          ]
+        }
+      ],
       "source": [
         "# Your code here\n",
         "to_add = \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k',\n",
@@ -143,12 +157,25 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "MApFdNyU5ZLf"
+        "id": "MApFdNyU5ZLf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b35ee58b-68e6-45c3-ce3c-5f1f7184dece"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+          ]
+        }
+      ],
       "source": [
         "# Your code here\n",
         "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+        "print(tup)\n",
         "\n",
         "# Your explanation here\n",
         "answer = \"Overwriting is possible by using the existing variable 'tup' with new values\""
@@ -171,13 +198,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dK3PatcG5ZLg",
-        "outputId": "65f40bd7-77a7-48f6-8e2e-58f62958e82e"
+        "outputId": "e3b3c1f6-81c8-47dc-e3d3-1b59e811fe22"
       },
       "outputs": [
         {
@@ -211,26 +238,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q0psya5I5ZLg",
-        "outputId": "e34ce826-e83e-4046-e6a4-2c0dcb20b00c"
+        "outputId": "b76065f5-7f00-4a13-ab46-3da6258f1f22"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "tup = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+            "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
             "Yup!\n"
           ]
         }
       ],
       "source": [
         "# Your code here\n",
+        "print(f\"tup = {tup}\")\n",
+        "\n",
         "tup3 = tup1 + tup2\n",
+        "print(f\"tup3 = {tup3}\")\n",
         "\n",
         "# BONUS: mini game\n",
         "def is_equals_to_tup(source):\n",
@@ -253,13 +285,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mhgG6hn55ZLh",
-        "outputId": "50c73f63-21a5-4adc-c2ba-654134a23628"
+        "outputId": "ca6db001-6417-4411-93f1-85c0a3ae5e53"
       },
       "outputs": [
         {
@@ -292,13 +324,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YODjaNI75ZLh",
-        "outputId": "a9b8844a-fa1d-41bd-ccd2-4a84cd48ce57"
+        "outputId": "b64aa353-5571-4a1d-ea3a-5253e12d569f"
       },
       "outputs": [
         {
@@ -309,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 8
         }
       ],
       "source": [
@@ -341,28 +373,28 @@
         "\n",
         "for i in letters:\n",
         "    if i in tup3:\n",
-        "        print(f\"{i} in tup3? Answer: True\")\n",
+        "        print(f\"{i} in tup3? True\")\n",
         "    else:\n",
-        "        print(\"Nope..\")"
+        "        print(f\"{i} in tup3? False\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "diXzfOM69ive",
-        "outputId": "ea665ec2-2ed1-4429-d0d0-605f5ec33173"
+        "outputId": "7b163f39-4362-45ff-da8a-f3e2107f7542"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a in tup3? Answer: True\n",
-            "Nope..\n",
-            "c in tup3? Answer: True\n",
-            "Nope..\n",
-            "Nope..\n"
+            "a in tup3? True\n",
+            "b in tup3? False\n",
+            "c in tup3? True\n",
+            "d in tup3? False\n",
+            "e in tup3? False\n"
           ]
         }
       ]
@@ -380,13 +412,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "R5Zn3BdE5ZLi",
-        "outputId": "b5c470fe-e58d-40dc-e94e-b0d9260a41b2"
+        "outputId": "e1725f80-f04e-4ca6-a2e3-35e532c3eb01"
       },
       "outputs": [
         {
@@ -397,7 +429,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 11
         }
       ],
       "source": [
