--- a/Module_1/Lab_6_String-Operations/main.ipynb
+++ b/Module_1/Lab_6_String-Operations/main.ipynb
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "21pEJHfSpjts"
       },
-      "execution_count": 9,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -46,13 +46,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8NEzNqZLkCU-",
-        "outputId": "85ff20db-35ca-4f59-fe53-c41a26b35f6e"
+        "outputId": "58680fd3-0d74-48c1-c13f-364ad70e7d78"
       },
       "outputs": [
         {
@@ -82,13 +82,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vs_VRM6JkCVA",
-        "outputId": "7c7bc012-521a-4f2d-80c3-b5aa7706f56b"
+        "outputId": "a40497b7-b4fc-4e60-b452-48a017bc574d"
       },
       "outputs": [
         {
@@ -120,13 +120,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8EJ4WDQxkCVA",
-        "outputId": "86c027b1-52c6-4a2f-d79b-803dafbfc427"
+        "outputId": "888f241b-9361-47d8-98fd-8ad6dba6f939"
       },
       "outputs": [
         {
@@ -179,11 +179,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 23,
       "metadata": {
-        "id": "4_G8nfVOkCVB"
+        "id": "4_G8nfVOkCVB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cfa05399-a5a2-4be6-c25c-16ca86fb0b29"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Step 1: removing delimiters, punctuations, and empty strings\n",
+            "------------------------------------------------------------\n",
+            "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n",
+            "\n",
+            "Step 2: dictionary of word frequency\n",
+            "------------------------------------\n",
+            "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n",
+            "\n",
+            "BONUS 1: sorting keys in ascending\n",
+            "-----------------------------------------------------\n",
+            "{'And': 1, 'But': 1, 'From': 1, 'I': 3, 'Is': 1, 'I’ve': 1, 'Some': 2, 'To': 1, 'also': 1, 'desire': 1, 'destruction': 1, 'end': 1, 'enough': 1, 'favor': 1, 'fire': 2, 'for': 1, 'great': 1, 'had': 1, 'hate': 1, 'hold': 1, 'ice': 2, 'if': 1, 'in': 2, 'it': 1, 'know': 1, 'of': 2, 'perish': 1, 'say': 3, 'suffice': 1, 'tasted': 1, 'that': 1, 'the': 1, 'think': 1, 'those': 1, 'to': 1, 'twice': 1, 'what': 1, 'who': 1, 'will': 1, 'with': 1, 'world': 1, 'would': 1}\n",
+            "\n",
+            "BONUS 2: sorting values in ascending\n",
+            "------------------------------------\n",
+            "[(1, 'And'), (1, 'But'), (1, 'From'), (1, 'Is'), (1, 'I’ve'), (1, 'To'), (1, 'also'), (1, 'desire'), (1, 'destruction'), (1, 'end'), (1, 'enough'), (1, 'favor'), (1, 'for'), (1, 'great'), (1, 'had'), (1, 'hate'), (1, 'hold'), (1, 'if'), (1, 'it'), (1, 'know'), (1, 'perish'), (1, 'suffice'), (1, 'tasted'), (1, 'that'), (1, 'the'), (1, 'think'), (1, 'those'), (1, 'to'), (1, 'twice'), (1, 'what'), (1, 'who'), (1, 'will'), (1, 'with'), (1, 'world'), (1, 'would'), (2, 'Some'), (2, 'fire'), (2, 'ice'), (2, 'in'), (2, 'of'), (3, 'I'), (3, 'say')]\n"
+          ]
+        }
+      ],
       "source": [
         "poem = \"\"\"Some say the world will end in fire,\n",
         "Some say in ice.\n",
@@ -195,12 +221,7 @@
         "Is also great\n",
         "And would suffice.\"\"\"\n",
         "\n",
-        "# Your code here:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Your code here:\n",
         "words = re.split(\"[ ,.\\n]\", poem)\n",
         "words = [word for word in words if word != '']\n",
         "print(f\"Step 1: removing delimiters, punctuations, and empty strings\")\n",
@@ -231,37 +252,6 @@
         "print(f\"\\nBONUS 2: sorting values in ascending\")\n",
         "print(\"-\" * 36)\n",
         "print(sort_values)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6pqPx4QU1RYi",
-        "outputId": "8c5d66c9-2c60-4cf0-e302-2cbc489b3aff"
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Step 1: removing delimiters, punctuations, and empty strings\n",
-            "------------------------------------------------------------\n",
-            "['Some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'Some', 'say', 'in', 'ice', 'From', 'what', 'I’ve', 'tasted', 'of', 'desire', 'I', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'But', 'if', 'it', 'had', 'to', 'perish', 'twice', 'I', 'think', 'I', 'know', 'enough', 'of', 'hate', 'To', 'say', 'that', 'for', 'destruction', 'ice', 'Is', 'also', 'great', 'And', 'would', 'suffice']\n",
-            "\n",
-            "Step 2: dictionary of word frequency\n",
-            "------------------------------------\n",
-            "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n",
-            "\n",
-            "BONUS 1: sorting keys in ascending\n",
-            "-----------------------------------------------------\n",
-            "{'And': 1, 'But': 1, 'From': 1, 'I': 3, 'Is': 1, 'I’ve': 1, 'Some': 2, 'To': 1, 'also': 1, 'desire': 1, 'destruction': 1, 'end': 1, 'enough': 1, 'favor': 1, 'fire': 2, 'for': 1, 'great': 1, 'had': 1, 'hate': 1, 'hold': 1, 'ice': 2, 'if': 1, 'in': 2, 'it': 1, 'know': 1, 'of': 2, 'perish': 1, 'say': 3, 'suffice': 1, 'tasted': 1, 'that': 1, 'the': 1, 'think': 1, 'those': 1, 'to': 1, 'twice': 1, 'what': 1, 'who': 1, 'will': 1, 'with': 1, 'world': 1, 'would': 1}\n",
-            "\n",
-            "BONUS 2: sorting values in ascending\n",
-            "------------------------------------\n",
-            "[(1, 'And'), (1, 'But'), (1, 'From'), (1, 'Is'), (1, 'I’ve'), (1, 'To'), (1, 'also'), (1, 'desire'), (1, 'destruction'), (1, 'end'), (1, 'enough'), (1, 'favor'), (1, 'for'), (1, 'great'), (1, 'had'), (1, 'hate'), (1, 'hold'), (1, 'if'), (1, 'it'), (1, 'know'), (1, 'perish'), (1, 'suffice'), (1, 'tasted'), (1, 'that'), (1, 'the'), (1, 'think'), (1, 'those'), (1, 'to'), (1, 'twice'), (1, 'what'), (1, 'who'), (1, 'will'), (1, 'with'), (1, 'world'), (1, 'would'), (2, 'Some'), (2, 'fire'), (2, 'ice'), (2, 'in'), (2, 'of'), (3, 'I'), (3, 'say')]\n"
-          ]
-        }
       ]
     },
     {
@@ -275,13 +265,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1cPysD8DkCVC",
-        "outputId": "d11c1db8-5338-4c16-94c7-57dd46cc789b"
+        "outputId": "631d6349-f4b6-49f3-ce55-6258965381b7"
       },
       "outputs": [
         {
@@ -355,9 +345,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "leF-9JSfEukC",
-        "outputId": "9554a42c-f890-4001-fabd-3c3401e1d1f6"
+        "outputId": "911c367a-6a30-46c8-adb7-8309b1cbf7fb"
       },
-      "execution_count": 16,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
