--- a/katas.ipynb
+++ b/katas.ipynb
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eZ_rTqjAtBiT",
-        "outputId": "b9909d29-0655-47f3-b194-cee49a9b2632"
+        "outputId": "c5e77d30-2212-42f4-8c4e-72b56bdf3cba"
       },
       "execution_count": 1,
       "outputs": [
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CGCNp9IhyrXV",
-        "outputId": "6511eb0e-96b7-4305-d338-2780b6c363bf"
+        "outputId": "98e3d809-c748-489d-f814-9df60a6932f0"
       },
       "execution_count": 2,
       "outputs": [
@@ -212,11 +212,11 @@
             "----------------------------------------------------------------------------------------------\n",
             "\n",
             "GENERATED WORDS:\n",
-            "['Keep', 'Remove', 'Remove', 'Keep', 'Remove', 'Remove', 'Keep', 'Keep', 'Remove', 'Remove']\n",
+            "['Remove', 'Remove', 'Keep', 'Remove', 'Remove', 'Keep', 'Keep', 'Remove', 'Remove', 'Remove']\n",
             "\n",
             "\n",
             "First elements to keep:\n",
-            "['Keep', 'Remove', 'Remove', 'Keep', 'Remove']\n"
+            "['Remove', 'Keep', 'Remove', 'Keep', 'Remove']\n"
           ]
         }
       ]
@@ -264,7 +264,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bM3bPXzT6kxY",
-        "outputId": "92da6d84-30a7-4add-ed14-4e0abf1fa6b4"
+        "outputId": "533453bc-e88b-4119-c4e8-a8d644058af3"
       },
       "execution_count": 3,
       "outputs": [
@@ -348,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Bx7dtrY7U-g",
-        "outputId": "1c6efaeb-b465-418a-a31c-bdce2edab081"
+        "outputId": "827a6068-1f38-4ebf-bdac-adb3196085df"
       },
       "execution_count": 4,
       "outputs": [
@@ -456,7 +456,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "itWHBnFXOSgI",
-        "outputId": "8275be4f-bb17-4b40-e990-ba0b02f105b7"
+        "outputId": "354d4412-562e-407b-e877-dbd236a62f1c"
       },
       "execution_count": 5,
       "outputs": [
@@ -520,7 +520,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mE1fiABiRZGb",
-        "outputId": "d4803b50-c520-4ae0-a343-f5096b48ce57"
+        "outputId": "141d73f9-8258-4ce0-f603-1cd2760da224"
       },
       "execution_count": 6,
       "outputs": [
@@ -579,7 +579,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fpMOxA4GTpdZ",
-        "outputId": "511b6db4-0356-4808-eab6-2dc9d485225d"
+        "outputId": "ce438f02-01b3-4798-e383-8c5dde73337b"
       },
       "execution_count": 7,
       "outputs": [
@@ -594,9 +594,9 @@
             "\n",
             "\n",
             "GENERATED WORDS:\n",
-            "['Keep', 'Remove', 'Remove', 'Keep', 'Remove', 'Remove', 'Keep', 'Keep', 'Remove', 'Remove']\n",
+            "['Remove', 'Remove', 'Keep', 'Remove', 'Remove', 'Keep', 'Keep', 'Remove', 'Remove', 'Remove']\n",
             "\n",
-            "[('Keep', 4), ('Remove', 6)]\n"
+            "[('Keep', 3), ('Remove', 7)]\n"
           ]
         }
       ]
@@ -644,7 +644,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yAuyT1neXWeb",
-        "outputId": "932d12a2-2d51-4a83-af90-332d674c4e09"
+        "outputId": "54ce9429-cf72-425c-9081-a7c9e8e67a5f"
       },
       "execution_count": 8,
       "outputs": [
@@ -665,9 +665,9 @@
             "\n",
             "\n",
             "GENERATED WORDS:\n",
-            "['Keep', 'Remove', 'Remove', 'Keep', 'Remove', 'Remove', 'Keep', 'Keep', 'Remove', 'Remove']\n",
+            "['Remove', 'Remove', 'Keep', 'Remove', 'Remove', 'Keep', 'Keep', 'Remove', 'Remove', 'Remove']\n",
             "\n",
-            "[('K', 4), ('e', 20), ('p', 4)]\n"
+            "[('K', 3), ('e', 20), ('p', 3)]\n"
           ]
         }
       ]
