--- a/Module_1/Lab_13_APIs/main.ipynb
+++ b/Module_1/Lab_13_APIs/main.ipynb
@@ -746,7 +746,7 @@
       "source": [
         "# authenticate access\n",
         "username = \"Katrina JMD\"\n",
-        "token = \"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\"\n",
+        "token = " ",
         "url = \"https://api.github.com/search/code?q=.scavengerhunt+in:path+repo:ironhack-datalabs/scavenger\"\n",
         "\n",
         "response = requests.get(url, auth = (username, token))\n",
