--- a/Module_1/Lab_29_Dataframe-Calculations/challenge_1.ipynb
+++ b/Module_1/Lab_29_Dataframe-Calculations/challenge_1.ipynb
@@ -2908,14 +2908,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 217,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 552
+          "height": 364
         },
         "id": "Ty7ReVVirFjS",
-        "outputId": "f4f8fd83-8d57-45ae-a6d6-2a74b887f552"
+        "outputId": "3dc462ee-612f-4ec1-f9db-31c060cef00b"
       },
       "outputs": [
         {
@@ -2930,7 +2930,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e44d1f92-f7a7-47eb-bce4-8e4999af06af\">\n",
+              "  <div id=\"df-bb482c5c-c9bc-4a69-ab24-4a14edf8366b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2973,7 +2973,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e44d1f92-f7a7-47eb-bce4-8e4999af06af')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb482c5c-c9bc-4a69-ab24-4a14edf8366b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3024,12 +3024,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e44d1f92-f7a7-47eb-bce4-8e4999af06af button.colab-df-convert');\n",
+              "          document.querySelector('#df-bb482c5c-c9bc-4a69-ab24-4a14edf8366b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e44d1f92-f7a7-47eb-bce4-8e4999af06af');\n",
+              "          const element = document.querySelector('#df-bb482c5c-c9bc-4a69-ab24-4a14edf8366b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3057,22 +3057,23 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "            AvgScores\n",
-              "#              348.95\n",
-              "Total          438.09\n",
-              "HP              68.02\n",
-              "Attack          75.97\n",
-              "Defense         70.89\n",
-              "Sp. Atk         79.28\n",
-              "Sp. Def         73.06\n",
-              "Speed           70.88\n",
-              "Generation       3.22\n",
-              "Legendary        0.15\n",
-              "A/D.Ratio        1.31"
+              "                 #   Total     HP  Attack  Defense  Sp. Atk  Sp. Def  Speed  \\\n",
+              "Combo Type                                                                    \n",
+              "Bug-Poison  199.17  347.92  53.75   68.33    58.08    42.50    59.33  65.92   \n",
+              "Psychic     381.97  464.55  72.55   64.95    67.24    98.55    82.39  78.87   \n",
+              "Rock        410.11  409.44  67.11  103.33   107.22    40.56    58.33  32.89   \n",
+              "Water-Dark  347.67  493.83  69.17  120.00    65.17    88.83    63.50  87.17   \n",
+              "\n",
+              "            Generation  Legendary  A/D.Ratio  \n",
+              "Combo Type                                    \n",
+              "Bug-Poison        2.33       0.00       1.32  \n",
+              "Psychic           3.34       0.24       1.16  \n",
+              "Rock              3.89       0.11       1.26  \n",
+              "Water-Dark        3.17       0.00       2.29  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f80f7528-aefd-487a-866d-083f0be6d340\">\n",
+              "  <div id=\"df-78fbdbec-c3a4-4faf-9449-b4f39279b047\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -3092,58 +3093,94 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>AvgScores</th>\n",
+              "      <th>#</th>\n",
+              "      <th>Total</th>\n",
+              "      <th>HP</th>\n",
+              "      <th>Attack</th>\n",
+              "      <th>Defense</th>\n",
+              "      <th>Sp. Atk</th>\n",
+              "      <th>Sp. Def</th>\n",
+              "      <th>Speed</th>\n",
+              "      <th>Generation</th>\n",
+              "      <th>Legendary</th>\n",
+              "      <th>A/D.Ratio</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Combo Type</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>#</th>\n",
-              "      <td>348.95</td>\n",
+              "      <th>Bug-Poison</th>\n",
+              "      <td>199.17</td>\n",
+              "      <td>347.92</td>\n",
+              "      <td>53.75</td>\n",
+              "      <td>68.33</td>\n",
+              "      <td>58.08</td>\n",
+              "      <td>42.50</td>\n",
+              "      <td>59.33</td>\n",
+              "      <td>65.92</td>\n",
+              "      <td>2.33</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>1.32</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Total</th>\n",
-              "      <td>438.09</td>\n",
+              "      <th>Psychic</th>\n",
+              "      <td>381.97</td>\n",
+              "      <td>464.55</td>\n",
+              "      <td>72.55</td>\n",
+              "      <td>64.95</td>\n",
+              "      <td>67.24</td>\n",
+              "      <td>98.55</td>\n",
+              "      <td>82.39</td>\n",
+              "      <td>78.87</td>\n",
+              "      <td>3.34</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>1.16</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>HP</th>\n",
-              "      <td>68.02</td>\n",
+              "      <th>Rock</th>\n",
+              "      <td>410.11</td>\n",
+              "      <td>409.44</td>\n",
+              "      <td>67.11</td>\n",
+              "      <td>103.33</td>\n",
+              "      <td>107.22</td>\n",
+              "      <td>40.56</td>\n",
+              "      <td>58.33</td>\n",
+              "      <td>32.89</td>\n",
+              "      <td>3.89</td>\n",
+              "      <td>0.11</td>\n",
+              "      <td>1.26</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Attack</th>\n",
-              "      <td>75.97</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Defense</th>\n",
-              "      <td>70.89</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sp. Atk</th>\n",
-              "      <td>79.28</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sp. Def</th>\n",
-              "      <td>73.06</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Speed</th>\n",
-              "      <td>70.88</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Generation</th>\n",
-              "      <td>3.22</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Legendary</th>\n",
-              "      <td>0.15</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>A/D.Ratio</th>\n",
-              "      <td>1.31</td>\n",
+              "      <th>Water-Dark</th>\n",
+              "      <td>347.67</td>\n",
+              "      <td>493.83</td>\n",
+              "      <td>69.17</td>\n",
+              "      <td>120.00</td>\n",
+              "      <td>65.17</td>\n",
+              "      <td>88.83</td>\n",
+              "      <td>63.50</td>\n",
+              "      <td>87.17</td>\n",
+              "      <td>3.17</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>2.29</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f80f7528-aefd-487a-866d-083f0be6d340')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-78fbdbec-c3a4-4faf-9449-b4f39279b047')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3194,12 +3231,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f80f7528-aefd-487a-866d-083f0be6d340 button.colab-df-convert');\n",
+              "          document.querySelector('#df-78fbdbec-c3a4-4faf-9449-b4f39279b047 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f80f7528-aefd-487a-866d-083f0be6d340');\n",
+              "          const element = document.querySelector('#df-78fbdbec-c3a4-4faf-9449-b4f39279b047');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3222,7 +3259,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 215
+          "execution_count": 217
         }
       ],
       "source": [
@@ -3232,7 +3269,7 @@
         "checkList = pokemon.loc[pokemon[\"Combo Type\"].isin(Top5_combo)][\"Combo Type\"].value_counts().to_frame()\n",
         "display(checkList)\n",
         "\n",
-        "AvgScore = pokemon.loc[pokemon[\"Combo Type\"].isin(Top5_combo)].mean(numeric_only=True).to_frame().rename(columns={0:\"AvgScores\"})\n",
+        "AvgScore = pokemon.loc[pokemon[\"Combo Type\"].isin(Top5_combo)].groupby(\"Combo Type\").mean(numeric_only=True).rename(columns={0:\"AvgScores\"})\n",
         "np.round(AvgScore, decimals=2)"
       ]
     }
