LAB29 Challenge3 DONE

--- a/Module_1/Lab_29_Dataframe-Calculations/challenge_3.ipynb
+++ b/Module_1/Lab_29_Dataframe-Calculations/challenge_3.ipynb
@@ -836,7 +836,7 @@
         "preffered = TotalSpent.quantile(0.75) # 75% of the data is below the result\n",
         "\n",
         "print(f\"95th PERCENTILE CORRESPONDS TO A TOTAL AMOUNT SPENT OF {float(vip)}\")\n",
-        "print(f\"BEWTEEN 75th AND 95th PERCENTILE CORRESPONDS TO A TOTAL AMOUNT SPENT OF {float(preffered)}\")\n",
+        "print(f\"BETWEEN 75th AND 95th PERCENTILE CORRESPONDS TO A TOTAL AMOUNT SPENT OF {float(preffered)}\")\n",
         "\n",
         "# filter customers based on quantile ranges\n",
         "vipCustomers = TotalSpent[TotalSpent >= float(vip)]\n",
