LAB29 Challenge3 DONE

--- a/Module_1/Lab_29_Dataframe-Calculations/challenge_3.ipynb
+++ b/Module_1/Lab_29_Dataframe-Calculations/challenge_3.ipynb
@@ -1247,7 +1247,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# customers above 95th percentile and between 75th and 95th percentile\n",
+        "# setting customer status\n",
         "print(\"SUB PROBLEM 3 : LABEL CUSTOMERS BASED ON TOTAL AMOUNT SPENT\\n\")\n",
         "\n",
         "# function that sets customer staus based on the quantile thresholds\n",
