LAB10 Subsetting and Descriptive Stats DONE

--- a/module_2/Lab_10_Subsetting-and-Descriptive-Statistics/main.ipynb
+++ b/module_2/Lab_10_Subsetting-and-Descriptive-Statistics/main.ipynb
@@ -3422,29 +3422,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 1,
       "metadata": {
         "id": "b7Cs-QYx-m4W",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f04e10f6-7983-4528-aef2-5303f33150fb"
+        "outputId": "ac9e0e6c-4de2-4abb-83f4-78a5376a14e6"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(500, 6)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 59
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Missing data\n"
+          ]
         }
       ],
       "source": [
         "# your code here\n",
-        "employees.shape"
+        "print(\"Missing data\")"
       ]
     },
     {
